<resources>
    <string name="app_name">AppGCC</string>
    <!-- Profile -->
    <string name="tv_first_name">Nombre</string>
    <string name="tv_last_name">Apellido</string>
    <string name="tv_email">Email</string>
    <string name="tv_phone">Teléfono</string>
    <string name="tv_password">Contraseña</string>

    <string name="address">Calle Falsa 123</string>
    <string name="phone" translatable="false">11-4444-5555</string>
    <string name="whatsapp" translatable="false">5491144445555</string>
    <string name="hours">Todos los días de 10 a 20 hs</string>
    <string name="is_open">En este momento ABIERTO</string>
    <string name="is_closed">En este momento CERRADO</string>
    <string name="share">Compartir</string>
    <string name="whatsapp_msg">Hola, quiero hacer un pedido</string>
    <string name="text_contact_phone">Teléfono:</string>
    <string name="text_whatsapp" translatable="false">WhatsApp:</string>
    <string name="title_hours">Horario de atención:</string>
    <string name="main_title" translatable="false">Gordos con chorizo</string>
    <string name="main_subtitle">Bienvenido!</string>
    <string name="text_email" translatable="false">Email</string>
    <string name="text_password">Contraseña</string>
    <string name="text_logo" translatable="false">Logo</string>
    <string name="text_btnWp">Botón WhatsApp</string>
    <string name="text_btnBack">Botón volver</string>
    <string name="text_register_form">Formulario de registro</string>
    <string name="text_address">Dirección:</string>
    <string name="profile_title">Información de perfil</string>

    <!-- buttons -->
    <string name="button_cancel">Cancelar</string>
    <string name="button_register">Registrarse</string>
    <string name="button_login">Ingresar</string>
    <string name="button_forgot">Olvide mi contraseña</string>
    <string name="button_return">Volver</string>
    <string name="button_whatsapp">Contáctanos por WhatsApp</string>
    <string name="btn_profile">Perfil</string>
    <string name="btn_logout">Cerrar sesión</string>
    <string name="btn_contact">Contáctanos</string>
    <string name="btn_addFood">Agregar</string>
    <string name="btn_myList">Mi lista</string>
    <string name="btn_save">Guardar</string>
    <string name="btnChangePass">Cambiar contraseña</string>
    <!-- hints -->
    <string name="hint_first_name">Ingresar nombre</string>
    <string name="hint_last_name">Ingresar apellido</string>
    <string name="hint_phone">Ingresar teléfono</string>
    <string name="hint_email">Ingresar email valido</string>
    <string name="hint_password">Ingresar contraseña</string>
    <string name="hint_name">Ingresar nombre</string>
    <string name="hint_price">Ingresar precio</string>
    <string name="hint_description">Ingresar descripción</string>
    <string name="search_food">Buscar por nombre o categoría</string>
    <!-- errors -->
    <string name="error_first_name">Nombre obligatorio</string>
    <string name="error_last_name">Apellido obligatorio</string>
    <string name="error_phone">Teléfono obligatorio</string>
    <string name="error_email">Email valido oblitarorio</string>
    <string name="error_password">Contraseña oblitaroria y debe tener al menos 6 caracteres</string>
    <string name="invalid_email">Formato del email incorrecto</string>
    <string name="wrong_password">Contraseña incorrecta</string>
    <string name="weak_password">La contraseña debe tener al menos 6 caracteres</string>
    <!-- toasts -->
    <string name="food_added">Agregado</string>
    <string name="toast_signup_ok">Registrado con éxito</string>
    <string name="toast_signup_failed">Todos los campos son obligatorios</string>
    <string name="toast_signup_same_user">Una cuenta con este email ya existe</string>
    <string name="title_activity_login" translatable="false">LoginActivity</string>
    <string name="prompt_email" translatable="false">Email</string>
    <string name="prompt_password" translatable="false">Password</string>
    <string name="login_welcome">Bienvenido</string>
    <string name="login_complete">Ingresa tu email y contraseña</string>
    <string name="login_invalid_user">Email/password valido</string>
    <string name="invalid_password">La contraseña debe tener al menos 6 caracteres</string>
    <string name="user_not_found">Usuario invalido o no registrado.</string>
    <string name="user_disabled">Usuario deshabiitado por el administrador</string>
    <string name="food_updated">Comida actualizada</string>
    <string name="food_deleted">Comida borrada</string>
    <!-- main-->
    <string name="tv_main_sub">Lista de comidas</string>
    <string name="tv_main_welcome">Hola</string>
    <string name="tv_main_food">Comidas</string>
    <string name="tv_main_dessert">Postres</string>
    <string name="tv_main_drink">Bebidas</string>
    <string name="text_btn_food">Botón comidas</string>
    <string name="text_btn_dessert">Botón postres</string>
    <string name="text_btn_drink">Botón bebidas</string>
    <string name="alert_title">Cerrar sesión</string>
    <string name="alert_msg">¿Esta seguro que desea cerrar sesión?</string>
    <string name="alert_yes">Aceptar</string>
    <string name="alert_no">Cancelar</string>
    <string name="forgot_title">Recuperar contraseña</string>
    <string name="forgot_msg">Ingresa tu email para recuperar tu contraseña</string>
    <string name="forgot_ok">Email enviado, revisa tu correo</string>
    <string name="forgot_error">ERROR, volver a internar</string>
    <string name="change_title">Cambiar contraseña</string>
    <string name="change_ok">Contraseña cambiada</string>
    <string name="change_error">ERROR, verificar contraseña y volver a intentar</string>
    <string name="edit_title">Editar o borrar comida</string>
    <string name="edit_delete">Borrar</string>
    <string name="dialog_title">Agregar comida</string>
    <string name="dialog_msg">Llenar todos los campos</string>
    <string name="dialog_name">Nombre:</string>
    <string name="dialog_category">Categoría:</string>
    <string name="dialog_price">Precio:</string>
    <string name="select_cat">Seleccionar categoría</string>
    <string name="list_creator">Agregado por:</string>
    <string name="dialog_description">Descripción:</string>
    <string-array name="categories_array">
        <item>Comida</item>
        <item>Bebida</item>
        <item>Postre</item>
    </string-array>

    <string name="title_home" translatable="false">Home</string>
    <string name="title_dashboard" translatable="false">Dashboard</string>
    <string name="title_notifications" translatable="false">Notifications</string>

</resources>