<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bc_light_blue"
    tools:context=".Activity.MenuActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/scrollView3">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvMainWelcome"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="8dp"
                android:text="@string/tv_main_welcome"
                android:textColor="@color/blue_title"
                android:textSize="34sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvMainSub"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="4dp"
                android:text="@string/tv_main_sub"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/tvFood"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="6dp"
                android:text="@string/tv_main_food"
                android:textColor="@color/blue_title"
                android:textSize="20sp"
                android:textStyle="bold" />

            <ImageButton
                android:id="@+id/btnFood"
                android:layout_width="wrap_content"
                android:layout_height="200dp"
                android:backgroundTint="@color/transparent"
                android:contentDescription="@string/text_btn_food"
                android:cropToPadding="true"
                android:scaleType="centerCrop"
                app:srcCompat="@drawable/banner_food" />

            <TextView
                android:id="@+id/tvCat2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="6dp"
                android:text="@string/tv_main_dessert"
                android:textColor="@color/blue_title"
                android:textSize="20sp"
                android:textStyle="bold" />

            <ImageButton
                android:id="@+id/btnDessert"
                android:layout_width="wrap_content"
                android:layout_height="200dp"
                android:adjustViewBounds="false"
                android:backgroundTint="@color/transparent"
                android:contentDescription="@string/text_btn_dessert"
                android:cropToPadding="true"
                android:scaleType="centerCrop"
                app:srcCompat="@drawable/banner_dessert"
                tools:ignore="ImageContrastCheck" />

            <TextView
                android:id="@+id/tvCat3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="6dp"
                android:text="@string/tv_main_drink"
                android:textColor="@color/blue_title"
                android:textSize="20sp"
                android:textStyle="bold" />

            <ImageButton
                android:id="@+id/btnDrink"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:adjustViewBounds="false"
                android:backgroundTint="@color/transparent"
                android:contentDescription="@string/text_btn_drink"
                android:cropToPadding="true"
                android:scaleType="centerCrop"
                app:srcCompat="@drawable/banner_drink" />

        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>