<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/contactLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bc_light_blue"
    tools:context=".Activity.ContactActivity">

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txtContactTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:layout_marginBottom="16dp"
                android:text="@string/button_whatsapp"
                android:textColor="@color/black"
                android:textSize="24sp"
                android:textStyle="bold" />

            <ImageButton
                android:id="@+id/btnWhatsApp"
                android:layout_width="130dp"
                android:layout_height="130dp"
                android:adjustViewBounds="false"
                android:backgroundTint="#00FFFFFF"
                android:contentDescription="@string/text_btnWp"
                android:cropToPadding="false"
                android:scaleType="centerCrop"
                android:src="@drawable/ic_whatsapp"
                tools:ignore="ImageContrastCheck" />

            <Button
                android:id="@+id/btnShare"
                style="@style/Widget.AppCompat.Button"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/share" />

            <TextView
                android:id="@+id/txtContactPhone1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:text="@string/text_contact_phone"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold"
                app:drawableLeftCompat="@drawable/ic_phone" />

            <TextView
                android:id="@+id/txtContactPhone2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:minHeight="48dp"
                android:text="@string/phone"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/txtAddress1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/text_address"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold"
                app:drawableStartCompat="@drawable/ic_location" />

            <TextView
                android:id="@+id/txtAddress2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:gravity="center"
                android:minHeight="48dp"
                android:text="@string/address"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/txtHours1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:text="@string/title_hours"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold"
                app:drawableLeftCompat="@drawable/ic_clock" />

            <TextView
                android:id="@+id/txtHours2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:gravity="center"
                android:text="@string/hours"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/tvIsOpen"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:gravity="center"
                android:textColor="@color/blue_title"
                android:textSize="20sp" />

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>