<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/clLogin"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_intro"
    tools:context=".Activity.MainActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imgLogo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:contentDescription="@string/text_logo"
            android:scaleType="fitCenter"
            app:srcCompat="@drawable/new_logo"
            tools:ignore="ImageContrastCheck" />

        <TextView
            android:id="@+id/textSubTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="32dp"
            android:gravity="center"
            android:text="@string/main_subtitle"
            android:textColor="@color/blue_title"
            android:textSize="30sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/txtUser"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:drawableStart="@drawable/ic_baseline_account_circle_24"
            android:hint="@string/text_email"
            android:inputType="textEmailAddress"
            android:textColorHint="#616161"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/txtPass"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:drawableStart="@drawable/ic_baseline_lock_24"
            android:ems="10"
            android:hint="@string/text_password"
            android:inputType="textPassword"
            android:textColorHint="#616161"
            android:textSize="20sp"
            tools:ignore="MissingConstraints" />

        <Button
            android:id="@+id/btnLogin"
            android:layout_width="250dp"
            android:layout_height="50dp"
            android:backgroundTint="@color/blue"
            android:text="@string/button_login"
            android:textColor="@color/white"
            android:textSize="16sp" />

        <Button
            android:id="@+id/btnSignUpHome"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:backgroundTint="@color/red"
            android:text="@string/button_register"
            android:textColor="@color/black"
            android:textSize="16sp" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>